# adequate-c

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
.github/workflows/: c-cpp.yml
docs/: examples.md  full_grammar.ebnf  grammar.ebnf  roadmap.md  syntax.md
grammar/: current_grammar.ebnf  proposed_grammar.ebnf
src/: main.cpp
src/ast/: ast.hpp  decl.cpp  decl.hpp  expr.cpp  expr.hpp  stmt.cpp  stmt.hpp  visitor.hpp
src/diagnostics/: diagnostics.hpp
src/frontend/: ast.cpp  ast.hpp  lexer.cpp  lexer.hpp  parser.cpp  parser.hpp  token.hpp
src/frontend/ast/: ast.cpp  ast.hpp  decl.cpp  decl.hpp  expr.cpp  expr.hpp  stmt.cpp  stmt.hpp
src/frontend/diagnostics/: diagnostics.hpp
src/frontend/lexer/: lexer.cpp  lexer.hpp  token.hpp
src/frontend/types/: type.hpp
src/lexer/: lexer.cpp  lexer.hpp  token.hpp
src/parser/: parser.cpp  parser.hpp
src/types/: type.hpp
tests/: test_ast.cpp  test_helpers.hpp  test_lexer.cpp
tests/input/ast/: variableDec.ac
tests/input/lexer/: test_keywords.ac
tests/integration/: test_lexer_parser.cpp
tests/lexer/: test_keywords.ac
tests/manual/: test_ast.cpp  test_lexer.cpp
tests/unit/: test_ast.cpp  test_lexer.cpp  test_parser_decl.cpp  test_parser_expr.cpp  test_token.cpp  test_types.cpp
tests/unit/frontend/: test_ast.cpp  test_lexer.cpp  test_parser_expr.cpp  test_token.cpp  test_types.cpp
